fix z-index

--- a/src/components/client/foods/addFood/addFood.css
+++ b/src/components/client/foods/addFood/addFood.css
@@ -24,7 +24,7 @@
     position: sticky ;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 999;
     background:rgba(255, 255, 255, 1) ;
 
 }
